# tabfm

./: .gitignore  MODULE.bazel  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: pytest_and_autopublish.yml
examples/: tabarena_classification_example.py  tabarena_regression_example.py
tabfm/: __init__.py
tabfm/src/: BUILD  classifier_and_regressor.py  classifier_and_regressor_multidevice_test.py  classifier_and_regressor_pytorch_test.py  classifier_and_regressor_test.py
tabfm/src/hugging_face/: convert_and_upload.py
tabfm/src/jax/: BUILD  __init__.py  tabfm_v1_0_0.py
tabfm/src/pytorch/: BUILD  model.py  tabfm_v1_0_0.py
