module(
    name = "tabfm",
    version = "1.0.0",
)

bazel_dep(name = "rules_python", version = "0.26.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
    extra_pip_args = ["--index-url", "https://pypi.org/simple/", "--extra-index-url", "https://download.pytorch.org/whl/cpu"],
)

use_repo(pip, "pip")
